syntax = "proto3";

package vn.techres.microservice.grpc.java.dashboard.branch_channel_food_branch_map;

service BranchChannelFoodBranchMapService {
  rpc updateBranchMapWhenUnconnection (UpdateBranchMapWhenUnconnectionRequest) returns (BaseResponse) {} ; 
  rpc updateBranchMapWhenUnconnectionToken (UpdateBranchMapWhenUnconnectionTokenRequest) returns (BaseResponse) {} ; 
  rpc updateSettingBranch (UpdateSettingBranchRequest) returns (BaseResponse) {} ; 
  rpc updateSettingFoodChannelRestaurantBrand (UpdateSettingFoodChannelRestaurantBrandRequest) returns (BaseResponse) {} ; 
  
}

message UpdateBranchMapWhenUnconnectionRequest {
	int32 restaurant_id = 1;
	int32 restaurant_brand_id = 2;
	int32 channel_order_food_id = 3;
}

message UpdateBranchMapWhenUnconnectionTokenRequest {
	int32 restaurant_id = 1;
	int32 restaurant_brand_id = 2;
	int32 channel_order_food_id = 3;
	int32 channel_order_food_token_id = 4;
	
}

message BaseResponse {
  int32 status = 1;
  string message = 2;
  Empty data = 3;
}

message Empty {
}

// ----------- updateSettingBranch ----------
message UpdateSettingBranchRequest {
	int32 branch_id = 1;
	string list_remove = 2;
}

// ----------- updateSettingFoodChannelRestaurantBrand ----------
message UpdateSettingFoodChannelRestaurantBrandRequest {
	string channel_order_food_token_ids = 1;	
}