syntax = "proto3";

package vn.techres.microservice.grpc.nodejs_food_channel_connector.channel_order_api;


service ChannelOrderFoodApiService {
  rpc getFoods (GetFoodRequest) returns (ListFoodBaseResponse) {} ; 
  rpc updatePriceFoodsSHF (UpdatePriceFoodsSHFRequest) returns (EmptyBaseResponse) {} ; 
  rpc updatePriceFoodsBEF (UpdatePriceFoodsBEFRequest) returns (EmptyBaseResponse) {} ;
  rpc getBranches (GetBranchRequest) returns (ListBranchBaseResponse) {} ;
  rpc checkTokenGRF (CheckTokenGRFRequest) returns (CheckTokenGRFBaseResponse) {} ;
  rpc checkTokenBEF (CheckTokenBEFRequest) returns (CheckTokenBEFBaseResponse) {} ;
  rpc updateOrderStatus (UpdateOrderStatusRequest) returns (ListOrderStatusBaseResponse) {} ;
  rpc reconnectionTokenGRF (ReconnectionTokenGRFRequest)  returns (CheckTokenGRFBaseResponse) {} ;
  rpc reconnectionTokenBEF (ReconnectionTokenBEFRequest)  returns (CheckTokenBEFBaseResponse) {} ;
  rpc checkTokenAllFoodChannel (CheckTokenAllFoodChannelRequest) returns (ResultBaseResponse) {} ;
  rpc getChannelBranches (GetChannelBranchesRequest)  returns (ListChannelBranchesResponse) {} ;
  rpc syncChannelOrders (SyncChannelOrdersRequest) returns (EmptyBaseResponse);
  rpc syncChannelOrderHistories (SyncChannelOrderHistoriesRequest) returns (SyncChannelOrderHistoryBaseResponse);
  rpc getFoodToppings (GetFoodToppingRequest) returns (ListFoodToppingResponse) {} ; 
  rpc confirmChannelOrder (ConfirmChannelOrderRequest) returns (EmptyBaseResponse) {} ; 
  rpc getEarningSumaryReport (GetEarningSumaryReportRequest) returns (EarningSumaryReportResultResponse) {} ; 
  rpc getEarningSumaryReportV2 (GetEarningSumaryReportRequest) returns (EarningSumaryReportResultResponse) {} ; 

}

// ---------------------- getFoods ------------------------

message GetFoodRequest {
	string url = 1;
	string access_token = 2;
	string channel_branch_id = 3;
  string merchant_id = 4;
  int32 channel_order_food_id = 5;
  string url_get_account_information_detail = 6;

}

message FoodChannelOrderFood {
  string id = 1;
  string name = 2;
  string price = 3;
  string picture_url = 4;
  string description = 5;
  int32 is_pending = 6;
}

message ListFoodBaseResponse {
  int32 status = 1;
  string message = 2;
  repeated FoodChannelOrderFood data = 3;
}

// ---------------------- updatePriceFoodsSHF ------------------------

message UpdatePriceFoodsSHFRequest {
  string foods = 1;      
  string url = 2;       
  string access_token = 3; 
  int32 channel_branch_id = 4; 
}

message EmptyBaseResponse {
  int32 status = 1;
  string message = 2;
  Empty data = 3;
}

message Empty {
}


// ---------------------- updatePriceFoodsBEF ------------------------

message UpdatePriceFoodsBEFRequest {
  string foods = 1;      
  string url_food_detail = 2;  
  string url_food_update = 3;       
  string access_token = 4; 
  string channel_branch_id = 5;
  string merchant_id = 6;
}

// ---------------------- getBranches ------------------------

message GetBranchRequest {
	string url = 1;
	string access_token = 2;
  string username = 3;
  int32 channel_order_food_id = 4;
}

message BranchChannelOrderFood {
  string branch_id = 1;
  string branch_name = 2;
  string merchant_id = 3;
}

message ListBranchBaseResponse {
  int32 status = 1;
  string message = 2;
  repeated BranchChannelOrderFood data = 3;
}

// ---------------------- checkTokenGRF ------------------------

message CheckTokenGRFRequest {
	string url_logout = 1;
  string url_update_device = 2;
  string username = 4;
  string password = 5;
  string device_id = 6;
  string device_brand = 7;
}

message CheckTokenGRF {
	string access_token = 1;
}

message CheckTokenGRFBaseResponse {
  int32 status = 1;
  string message = 2;
  CheckTokenGRF data = 3;
}


// ---------------------- checkTokenBEF ------------------------

message CheckTokenBEFRequest {
	string url_login = 1;
  string username = 2;
  string password = 3;
}

message CheckTokenBEF {
	string access_token = 1;
  int32 user_id = 2;

}

message CheckTokenBEFBaseResponse {
  int32 status = 1;
  string message = 2;
  CheckTokenBEF data = 3;
}


// ---------------------- updateOrderStatus ------------------------

message UpdateOrderStatusRequest{       
  string channel_orders = 1;     
}

message OrderStatus{
  int32 id = 1; 
  int32 status = 2; 
  string status_string = 3;   
}

message ListOrderStatusBaseResponse {
  int32 status = 1;
  string message = 2;
  repeated OrderStatus data = 3;
}

// ---------------------- reconnectionTokenGRF ------------------------

message ReconnectionTokenGRFRequest{
  string url_login = 1;  
  string url_update_device = 2;  
  string username = 3;
  string password = 4; 
  string device_id = 5;
  string device_brand = 6;  
}


// ---------------------- reconnectionTokenBEF ------------------------

message ReconnectionTokenBEFRequest{
  string url_login = 1;  
  string username = 2;
  string password = 3; 
}


// ---------------------- checkTokenAllFoodChannel ------------------------

message CheckTokenAllFoodChannelRequest{
  string tokens = 1;
}

message ResultBaseResponse {
  int32 status = 1;
  string message = 2;
  repeated ErrorResponse data = 3;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
  int32 channel_order_food_token_id= 3;

}

// ---------------------- getChannelBranches ------------------------

message GetChannelBranchesRequest{
  int32 restaurant_brand_id = 1;
  string tokens = 2; 
}

message ChannelBranchesResponse{
  string branch_id = 1;
  string branch_name = 2;
  int32 channel_order_food_token_id = 3;
  string channel_order_food_token_name = 4;
  string merchant_id = 5;
  string branch_address = 6;
  string branch_phone = 7;
}

message ListChannelBranchesResponse {
  int32 status = 1;
  string message = 2;
  repeated ChannelBranchesResponse data = 3;
}

// ---------------------- syncChannelOrders ------------------------

message SyncChannelOrdersRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    string tokens = 4;
}


// ---------------------- syncChannelOrderHistories ------------------------

message SyncChannelOrderHistoriesRequest {
    string tokens = 1;
    string time = 2;
}

message SyncChannelOrderHistoriesResponse{
  string history_orders_SHF = 1;
  string history_orders_GRF = 2;
  string history_orders_BEF = 3;
}

message SyncChannelOrderHistoryBaseResponse {
  int32 status = 1;
  string message = 2;
  SyncChannelOrderHistoriesResponse data = 3;
}

// ---------------------- getFoodToppings ------------------------

message GetFoodToppingRequest {
	string url = 1;
	string access_token = 2;
	string channel_branch_id = 3;
  string merchant_id = 4;
  int32 channel_order_food_id = 5;
  string url_get_account_information_detail = 6;

}

message GroupFoodToppingResponse {
  string id = 1;
  string name = 2;
  repeated FoodToppingResponse list = 3;
}

message FoodToppingResponse {
  string id = 1;
  string name = 2;
  string price = 3;
}

message ListFoodToppingResponse {
  int32 status = 1;
  string message = 2;
  repeated GroupFoodToppingResponse data = 3;
}

// ---------------------- confirmChannelOrder ------------------------
message ConfirmChannelOrderRequest {
	string url_comfirm_order = 1;
	string access_token = 2;
	string channel_branch_id = 3;
  string merchant_id = 4;
  int32 channel_order_food_id = 5;
  string url_login = 6;
  string url_update_device = 7;
  string url_get_branch_detail = 8;
  string username = 9;
  string password = 10;
  string order_id = 11;
  int32 user_id = 12;
  string device_id = 13;
  string device_brand = 14;
}

// ---------------------- getEarningSumaryReport ------------------------

message GetEarningSumaryReportRequest {
 string tokens = 1;
 string from_date = 2;
 string to_date = 3;
}

message EarningSumaryReportResponse {
  double net_sales = 1;
  double net_total = 2;
  double total_orders = 3;
  string breakdown_by_category = 4;
}

message EarningSumaryReportResultResponse {
  int32 status = 1;
  string message = 2;
  EarningSumaryReportResponse data = 3;
}